# thymio_swarm_platform

./: .gitignore  README.md  pyproject.toml  raspberry_pi_initial_setup.sh  requirements.txt  start_tdm.sh  swarm_platform_setup.sh  test_tdmconnect.py  verify_installation.sh
analysis/: colour_spread.py
example_project/: swarm_project.yaml
example_project/experiments/: light_leds_green.py  light_leds_red.py  obstacle_avoidance.py
examples/: blink_external_repo.py  colour_mean.py  colour_spread.py  decision_external_repo.py  drive.py  hello.py  light_leds_green.py  light_leds_red.py  obstacle_avoidance.py  test_connection.py
platform/: logger.py  thymio.py
scripts/: raspberry_pi_initial_setup.sh  swarm_platform_setup.sh  verify_installation.sh
swarm_platform/: __init__.py  config.py  controller.py  exceptions.py  experiment.py  leds.py  logging.py  motors.py  robot.py  runner.py  sensors.py  thymio.py  utils.py
swarm_platform/controller/: client.py  project.py  session.py
swarm_platform/controllers/: controller.py  experiment.py  experiments.py
swarm_platform/coordinator/: server.py
swarm_platform/daemon/: log_manager.py  logger.py  main.py  server.py  test_connection.py
swarm_platform/examples/: obstacle_avoidance.py  test_connection.py  test_daemon.py
swarm_platform/experiments/: base.py  light_leds_green.py  stop.py  (+2 more)
tasks/: aggregate_logs.py  find_by_hostname.py  plot_trajectories.py  save_hostnames_to_file.py  test_optitrack.py  test_optitrack_tracker.py
test_scripts/: test_connection.py  test_project_loader.py  test_project_loader_pi.py
(+37 files in other folders)
