[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-platform"
version = "0.1.0"
description = "Python platform for Thymio swarm robotics"
requires-python = ">=3.11"

dependencies = [
    "tdmclient==0.1.21",
    "numpy",
    "pyyaml>=6.0.3",
    "pandas>=3.0.3",
    "natnet>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["swarm_platform*"]
